bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:4: error: ')' expected but 'false' found.
  }false
   ^